--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,9 @@
 # Ignore env file
 /config/local_env.yml
 
-# Ignore images uploaded
-/public/system/campaigns/avatars/
+# Ignore avatar image
+/public/system/campaigns/avatars
+
+# Ignore the twitter APIs
+/config/initializers/omniauth.rb
+/config/initializers/twitter.rb
