fixed env and rspec

--- a/config/local_env.yml
+++ b/config/local_env.yml
@@ -1,2 +1,5 @@
 PUBLISHABLE_KEY: pk_test_DmmHWH1covNY3u5Exanh6LkC
 SECRET_KEY: sk_test_yYJhRLwU2lhdxGxegxfsEfkH
+
+TWITTER_KEY: q2ja5Ijjno4J8dEAhnK54ccn4
+TWITTER_SECRET: xFTtJz5yxhdN4Vap4W3PCvV6TO0FkCTHOMG1SdE25FGVJM88fq
